fixed the boomer message

--- a/views/index.pug
+++ b/views/index.pug
@@ -3,4 +3,21 @@ html
         title= "Yuen's boomer net" 
     body
         script(src="/js/jwt-check.js")
-        h1 Yuen is a boomer
+        br
+        br
+        br
+        br
+        br
+        br
+        br
+        br
+        br
+        br
+        br
+        br
+        br
+        br
+        br
+        br
+        br
+        h1(style="font-size: 100px; text-align: center") YUEN IS A BOOMER
